Prevent layout shift for navbar logo

--- a/site-new/src/css/custom.css
+++ b/site-new/src/css/custom.css
@@ -164,3 +164,7 @@ li {
 img[alt='-BG-'] {
   background-color: var(--armeria-white);
 }
+
+.navbar__brand {
+  min-width: 170px;
+}
